@@ -1,6 +1,8 @@
 devel
 -----
 
+* Fixed Github issue #13632: Query Fails on Upsert with Replace_nth.
+
 * Resonably harden MoveShard against VelopcyPack more.
 
 * Removed older reference to VelocyPackDumper.
